Development
    Fix crash on streaming ICY site, should fix Ubuntu bug https://bugs.launchpad.net/ubuntu/+bug/285988
    Fix up some issues with get_metadata
    Update status icon visibility on preference close, fix status icon issue when libnotify missing
    Fix crash on arrow key press when lastfile == NULL
    Make sure proper item is selected in playlist when list is un/shuffled
    Fixup metadata parsing
    Fix problems with gecko-mediaplayer integration and gio mode
    Make replace and play mode a config option, but only when single instance mode available
    Cleanup the popup menu and have it work more like the normal control panel
    Why reinvent status icon menu, when normal popup menu has everything we need
    Implement simple status icon menu
    Add #EXTM3U to m3u saved playlists
    Allow cddb support to be optional in track loading
    Add tooltip to status icon
    Remember window location on hide
    Fix problems with playback when window is hidden
    Fix problems with streaming media on command line
    Change icon in tray to work like rhythmbox, always visible and it toggles the visibility of player
    On window minimise, put icon in tray, window returns on icon click (GTK 2.12 and higher)
    Update playlist name when items are added
    Set the playlist name on the master instance when running in replace and play mode
    Add in work around for gtk crash, when setting the default folder to a non-local uri
    Better m3u parser, meets specs a little better
    Handle previously unknown M3U file format
    Updated pls and m3u playlist saving to GIO support
    When media doesn't provide a title, fallback to the basename of the uri
    Rework show playlist patch, it didn't work right
    Remove the -idx option from mplayer command
    Make playlist visible on load only if playlist is loaded or if nothing loaded
    Fix problems with playlist name in playlist view
    Fix problem with open playlist button