@@ -1,4 +1,5 @@
 Development
+    Make subtitle and audio lists to be radio menus and update them so they show correctly on media load
     Fix crash on streaming ICY site, should fix Ubuntu bug https://bugs.launchpad.net/ubuntu/+bug/285988
     Fix up some issues with get_metadata
     Update status icon visibility on preference close, fix status icon issue when libnotify missing
